JDK 11 upgrade work, prep for vector-search feature (#2613)