@@ -209,6 +209,7 @@
           </dependency>
         </dependencies>
         <configuration>
+          <argLine>--add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-exports java.base/jdk.internal.misc=ALL-UNNAMED</argLine>
           <parallel>suites</parallel>
           <threadCountSuites>1</threadCountSuites>
           <reuseForks>false</reuseForks>
@@ -221,6 +222,9 @@
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>--add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-exports java.base/jdk.internal.misc=ALL-UNNAMED</argLine>
+        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-dependency-plugin</artifactId>
